; ModuleID = '/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_set.c'
source_filename = "/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap = type { i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bitmap_set(%struct.bitmap* %0, i64 %1) #0 {
  %3 = alloca %struct.bitmap*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.bitmap* %0, %struct.bitmap** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i64 @EWAH_BLOCK(i64 %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %11 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp uge i64 %9, %12
  br i1 %13, label %14, label %41

14:                                               ; preds = %2
  %15 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %16 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %5, align 8
  %19 = mul i64 %18, 2
  %20 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %21 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  %22 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %23 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %26 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = call i32 @REALLOC_ARRAY(i32* %24, i64 %27)
  %29 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %30 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %29, i32 0, i32 1
  %31 = load i32*, i32** %30, align 8
  %32 = load i64, i64* %6, align 8
  %33 = getelementptr inbounds i32, i32* %31, i64 %32
  %34 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %35 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* %6, align 8
  %38 = sub i64 %36, %37
  %39 = mul i64 %38, 4
  %40 = call i32 @memset(i32* %33, i32 0, i64 %39)
  br label %41

41:                                               ; preds = %14, %2
  %42 = load i64, i64* %4, align 8
  %43 = call i32 @EWAH_MASK(i64 %42)
  %44 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %45 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %44, i32 0, i32 1
  %46 = load i32*, i32** %45, align 8
  %47 = load i64, i64* %5, align 8
  %48 = getelementptr inbounds i32, i32* %46, i64 %47
  %49 = load i32, i32* %48, align 4
  %50 = or i32 %49, %43
  store i32 %50, i32* %48, align 4
  ret void
}

declare dso_local i64 @EWAH_BLOCK(i64) #1

declare dso_local i32 @REALLOC_ARRAY(i32*, i64) #1

declare dso_local i32 @memset(i32*, i32, i64) #1

declare dso_local i32 @EWAH_MASK(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
